<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Include the header layout -->
        <include
            android:id="@+id/header"
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:id="@+id/tabla1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:padding="20dp"
            tools:context="${relativePackage}.${activityClass}" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/name" />
            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="textPersonName" >
                <requestFocus />
            </EditText>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number2" />
            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/txtTelefono1"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    />
                <EditText
                    android:id="@+id/txtTelefono2"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone" />
            </TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/address" />
            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/notes" />
            <EditText
                android:id="@+id/txtNotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:ems="10"
                android:inputType="textMultiLine" />
            <CheckBox
                android:id="@+id/cbxFavorito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite" />
            <TableRow >
                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_clean" />
                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save" />
            </TableRow>
            <Button
                android:id="@+id/btnListar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_list" />
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>